# brian

./: Cargo.toml  docker-compose.yaml
cmd/: Cargo.toml  DevDockerfile
cmd/src/: main.rs
docker_debug/: config-iptables.sh
k8s_debug/: debug-cluster-role.yaml  run-ephemeral-it.sh  simple-client-debug.yaml  simple-echo-debug.yaml
tui/: Cargo.toml
tui/src/: app.rs  errors.rs  events.rs  main.rs  tui.rs
tui/src/screen/: base.rs  counter.rs  default.rs  main.rs  mod.rs
