[package]
name = "brian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "sync", "macros", "net", "io-util", "io-std", "signal"] }
#---
color-eyre = "0.6.3"
